# E3SM-IO

./: .clang-format  .travis.yml  AUTHORS  BLOB_IO.md  COPYRIGHT  INSTALL.md  Makefile  Makefile.am  README.md  acinclude.m4  aclocal.m4  cache.cfg  cache_async_vol.md  case_study.md  configure.ac  dat2nc.c  def_header.c  e3sm_io.c  e3sm_io.cpp  e3sm_io.h  e3sm_io.hpp  e3sm_io_err.hpp  e3sm_io_hints.txt  header_io_F_case.c  header_io_G_case.c  inq_header.c  parallel_run.sh  read_decomp.c  read_decomp.cpp  romio_patch.c  seq_runs.sh  slurm.knl  test.sh  var_io_F_case.c  var_io_G_case.c  variables.md
.github/workflows/: cache_async_vol.yml  cache_asyns_vol.yml  hdf5_mpich.yml  logvol_dev.yml  logvol_master.yml  logvol_master_mpich.yml  mpich_static.yml  pnetcdf_master.yml  ubuntu_mpich.yml  ubuntu_ompi.yml
cases/: Makefile.am  e3sm_io_case.hpp  e3sm_io_case_F.cpp  e3sm_io_case_F.hpp  e3sm_io_case_G.cpp  e3sm_io_case_G.hpp  header_io_F_case.cpp  header_io_G_case.cpp  var_io_F_case.cpp  var_io_G_case.cpp
datasets/: 866x72_16p.nc  Makefile.am  README.md  f_case_866x72_16p.bp  f_case_866x72_16p.h5  f_case_866x72_16p.nc  f_case_866x72_16p.nc4  f_case_h0.txt  f_case_h1.txt  g_case_cmpaso_16p.bp  g_case_cmpaso_16p.h5  g_case_cmpaso_16p.nc  g_case_cmpaso_16p.nc4  g_case_hist.txt  i_case_f19_g16_16p.bp  i_case_f19_g16_16p.h5  i_case_f19_g16_16p.nc  i_case_f19_g16_16p.nc4  i_case_h0.txt  i_case_h1.txt  map_f_case_16p.bp  map_f_case_16p.h5  map_f_case_16p.nc  map_f_case_16p.nc4  map_g_case_16p.bp  map_g_case_16p.h5  map_g_case_16p.nc  map_g_case_16p.nc4  map_i_case_16p.bp  map_i_case_16p.h5  map_i_case_16p.nc  map_i_case_16p.nc4  outputfile_h0.txt  outputfile_h1.txt  outputfile_header.txt
docs/: BLOB_IO.md  INSTALL.md  cache_async_vol.md  variables.md
drivers/: Makefile.am  e3sm_io_driver.hpp  e3sm_io_driver_adios2.cpp  e3sm_io_driver_adios2.hpp  e3sm_io_driver_hdf5.cpp  e3sm_io_driver_hdf5.hpp  e3sm_io_driver_pnc.cpp  e3sm_io_driver_pnc.hpp  e3sm_io_hdf5.cpp  e3sm_io_hdf5.hpp
m4/: check_cxx.m4  utils.m4
mpi_io_test/: 48602x72_512p_D1.nc  48602x72_512p_D2.nc  Makefile  README.md  noncontig_buf.c  pbs.knl
runscripts/: adios_build.sh  cori.m4  cori.sh  cori_copy.sh  cori_knl.m4  cori_replay.m4  gen_script.sh  gen_script_knl.sh  perlmutter.m4  summit.m4  summit_copy.sh  summit_replay.m4  theta.m4
src/: Makefile.am  blob_metadata.c  calc_metadata.c  e3sm_io.c  e3sm_io.h  e3sm_io_core.cpp  e3sm_io_err.h  e3sm_io_profile.m4  e3sm_io_profile.m4h  e3sm_io_profile_timers.m4  read_decomp.c  read_decomp.cpp  read_decomp_nc4.c  read_decomp_pnc.c  wrap_runs.sh
src/cases/: Makefile.am  blob_header_io_F_case.cpp  blob_header_io_G_case.cpp  blob_var_io_F_case.cpp  blob_var_io_G_case.cpp  e3sm_io_all_cases.cpp  e3sm_io_all_cases_scorpio.cpp  e3sm_io_case.cpp  e3sm_io_case.hpp  e3sm_io_case_F.cpp  e3sm_io_case_F.hpp  e3sm_io_case_F_pio.cpp  e3sm_io_case_F_pio.hpp  e3sm_io_case_F_scorpio.cpp  e3sm_io_case_F_scorpio.hpp  e3sm_io_case_G.cpp  e3sm_io_case_G.hpp  e3sm_io_case_G_scorpio.cpp  e3sm_io_case_G_scorpio.hpp  e3sm_io_case_I.cpp  e3sm_io_case_I_scorpio.cpp  e3sm_io_case_pio.hpp  e3sm_io_case_scorpio.hpp  header_def_F_case.cpp  header_def_F_case_scorpio.cpp  header_def_G_case.cpp  header_def_G_case_scorpio.cpp  header_def_I_case.cpp  header_def_I_case_scorpio.cpp  header_inq_F_case.cpp  header_inq_G_case.cpp  header_inq_I_case.cpp  header_io_F_case.cpp  header_io_F_case_pio.cpp  header_io_F_case_scorpio.cpp  header_io_G_case.cpp  header_io_G_case_scorpio.cpp  pnetcdf_blob_var_io_F_case.cpp  pnetcdf_blob_var_io_G_case.cpp  report_timing.cpp  (+19 more)
src/drivers/: Makefile.am  blob_ncmpio.c  blob_ncmpio.h  e3sm_io_driver.cpp  e3sm_io_driver.hpp  e3sm_io_driver_adios2.cpp  e3sm_io_driver_adios2.hpp  e3sm_io_driver_h5blob.cpp  e3sm_io_driver_h5blob.hpp  e3sm_io_driver_hdf5.cpp  e3sm_io_driver_hdf5.hpp  e3sm_io_driver_hdf5_agg.cpp  e3sm_io_driver_hdf5_int.hpp  e3sm_io_driver_hdf5_log.cpp  e3sm_io_driver_hdf5_log.hpp  e3sm_io_driver_hdf5_md.cpp  e3sm_io_driver_nc4.cpp  e3sm_io_driver_nc4.hpp  e3sm_io_driver_pnc.cpp  e3sm_io_driver_pnc.hpp
tests/: alltoall.c  alltomany.c  column_wise.c  e3sm_io_1map.c  extract_1map.c  h5_multidataset.c  icase_def.c  select_or.c
utils/: Makefile.am  README.md  bpstat.cpp  dat2decom.cpp  dat2decomp.cpp  dat2nc.c  datstat.cpp  decomp_copy.cpp  decomreplay.cpp  input_files_f_case.txt  input_files_g_case.txt  input_files_i_case.txt  map_stat.c  pnetcdf_blob_replay.c  wrap_runs.sh
